<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_app_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weather.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_findLocationFragment"
            app:destination="@id/findLocationFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_weatherFragment"
            app:destination="@id/weatherFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.example.weather.aboutus.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.weather.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/findLocationFragment"
        android:name="com.example.weather.findlocation.FindLocationFragment"
        android:label="@string/find_location"
        tools:layout="@layout/fragment_find_location">
        <action
            android:id="@+id/action_findLocationFragment_to_weatherFragment"
            app:destination="@id/weatherFragment"
            app:popUpTo="@id/findLocationFragment" />
    </fragment>
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.weather.weather.WeatherFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_weather" />

</navigation>