<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aboutUs">
        <!-- TODO: Update setting fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/temperatureTextId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/temperature"
                android:textColor="@color/black"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureTextId"
                app:singleSelection="true">


                <Button
                    android:id="@+id/FId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/F"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="134dp" />

                <Button
                    android:id="@+id/CId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="226dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/KId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/K"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="317dp"
                    tools:layout_editor_absoluteY="0dp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/pressureTextId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroup1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressureTextId"
                app:singleSelection="true">


                <Button
                    android:id="@+id/psiId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psi"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="134dp" />

                <Button
                    android:id="@+id/paId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pa"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="226dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/atmId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atm"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="317dp"
                    tools:layout_editor_absoluteY="0dp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/speedOfWindsId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/speedOfWinds"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroup2Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speedOfWindsId"
                app:singleSelection="true">


                <Button
                    android:id="@+id/mhId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mh"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="134dp" />

                <Button
                    android:id="@+id/kmhId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kmh"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="226dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/msId"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ms"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="317dp"
                    tools:layout_editor_absoluteY="0dp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
